kubernetes/44/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: envoy-gateway-system
  labels:
    name: envoy-gateway-system
